syntax = "proto3";

package proto;
//option go_package = "app/services;helloworld";

service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}